--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>業務ノート</title>
+  <title>Notes</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4a90e2">
   <link rel="apple-touch-icon" href="icon.png">
@@ -228,3 +228,4 @@ if ("serviceWorker" in navigator) {
 </script>
 </body>
 </html>
+
