--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Notes</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   body { font-family:"Meiryo UI",sans-serif; margin:0; }
   body.light { background:#f0f4f8; color:#2a3a50; }
