--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
 <meta charset="utf-8">
 <title>Notes</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   body { font-family:"Meiryo UI",sans-serif; margin:0; }
   body.light { background:#f0f4f8; color:#2a3a50; }
   body.dark  { background:#0f1115; color:#e8edf5; }
 
-  /* ヘッダー */
-  .topbar { background:#4a90e2; color:#fff; padding:12px 16px; display:flex; justify-content:space-between; align-items:center; }
+  /* ===== ヘッダー ===== */
+  .topbar { background:#4a90e2; color:#fff; padding:12px 16px; }
+  .topbar-inner { display:flex; justify-content:space-between; align-items:center; }
   .topbar-title { font-weight:bold; }
-  .topbar-actions { display:flex; gap:6px; }
+  .topbar-actions { display:flex; gap:6px; flex-wrap:wrap; }
   .btn { padding:6px 10px; cursor:pointer; border:none; border-radius:6px; background:#ffffff; color:#2a3a50; font-size:14px; }
   .btn:hover { opacity:.9; }
   body.dark .btn { background:#2a3140; color:#e8edf5; }
@@ -20,15 +21,19 @@
   .btn-danger  { background:#e24a4a; color:#fff; }
   .btn-cancel  { background:#fff; border:1px solid #999; color:#333; }
 
+  /* ハンバーガー */
+  .mobile-only { display:none; }
+
+  /* ===== 情報/検索 ===== */
   #infoPanel { display:none; font-size:12px; margin:8px 16px; color:#556; }
   #filterPanel { margin:8px 16px; }
   #q { width:100%; padding:8px; border:1px solid #cfd8e3; border-radius:6px; }
   #q::placeholder { color:#999; font-style:italic; }
 
-  /* 2カラムレイアウト（PC） */
+  /* ===== 2カラム ===== */
   .container { display:flex; }
   .sidebar {
-    width:200px; border-right:1px solid #d8e1eb; padding:14px;
+    width:180px; border-right:1px solid #d8e1eb; padding:14px;
     background: linear-gradient(180deg,#ffffff,#f7f9fc);
   }
   body.dark .sidebar { background:#1c1f28; border-color:#2a3140; }
@@ -36,71 +41,94 @@
   .sidebar ul { list-style:none; padding:0; margin:0; }
   .sidebar li { cursor:pointer; margin:6px 0; padding:6px 10px; border-radius:6px; display:flex; justify-content:space-between; align-items:center; }
   .sidebar li.active { background:#4a90e2; color:#fff; }
-  .sidebar .del-btn { font-size:13px; color:#888; cursor:pointer; margin-left:8px; opacity:0.6; }
-  .sidebar .del-btn:hover { color:#e24a4a; opacity:1; }
+  .sidebar .del-btn {
+    font-size: 13px;
+    color: #888;
+    cursor: pointer;
+    margin-left: 8px;
+    opacity: 0.6;
+    transition: color 0.2s, opacity 0.2s;
+  }
+  .sidebar .del-btn:hover {
+    color: #e24a4a;
+    opacity: 1;
+  }
   .main { flex:1; padding:18px; }
 
-  /* ノートカード */
+  /* ===== ノートカード ===== */
   .note {
-    border:1px solid #e3e8ef; background:#fff; border-radius:10px;
-    padding:12px; margin-bottom:12px; cursor:pointer;
+    border:1px solid #e3e8ef; background:#fff; border-radius:10px; padding:12px; margin-bottom:12px; cursor:pointer;
     box-shadow:0 2px 6px rgba(0,0,0,.06);
   }
   .note h3 { margin:0 0 4px; font-size:16px; }
   .note small { color:#6b7a90; }
   body.dark .note { background:#141925; border-color:#2a3140; color:#e8edf5; box-shadow:0 2px 8px rgba(0,0,0,.25); }
 
-  /* モーダル */
+  /* ===== モーダル ===== */
   #dlg {
-    display:none; position:absolute; width:600px; max-width:100%;
+    display:none; position:absolute;
+    width:600px; max-width:95%;
     background:#fff; color:#2a3a50; border:1px solid #d0d7e2; border-radius:10px;
     box-shadow:0 16px 32px rgba(0,0,0,.3); z-index:1000;
   }
   body.dark #dlg { background:#141925; color:#e8edf5; border-color:#2a3140; }
-  #dlgHeader { padding:10px 14px; background:#4a90e2; color:#fff; border-radius:10px 10px 0 0; cursor:move; user-select:none; font-weight:bold; }
+  #dlgHeader {
+    padding:10px 14px; background:#4a90e2; color:#fff; border-radius:10px 10px 0 0;
+    cursor:move; user-select:none;
+    font-weight:bold;
+  }
   #dlg .content { padding:20px; }
-  #dlg input, #dlg textarea, #dlg select { width:100%; margin-bottom:10px; padding:8px; border:1px solid #cfd8e3; border-radius:6px; box-sizing:border-box; }
+  #dlg input, #dlg textarea, #dlg select {
+    width:100%; margin-bottom:10px; padding:8px; border:1px solid #cfd8e3; border-radius:6px;
+    box-sizing:border-box;
+  }
   .modal-footer { text-align:right; }
 
-  /* スマホ用レスポンシブ */
+  /* ===== スマホ用レスポンシブ ===== */
   @media screen and (max-width:600px) {
     body { font-size:17px; }
+
+    .mobile-only { display:inline-block; }
+    .topbar-actions button:not(.mobile-only) { display:none; }
+
     .sidebar {
-      position:fixed; left:-220px; top:0; height:100%; width:200px;
-      transition:left 0.3s; z-index:2000;
+      position:absolute;
+      left:-200px;
+      top:50px;
+      height:100%;
+      background:#fff;
+      z-index:2000;
+      transition:left 0.3s;
     }
-    .sidebar.open { left:0; }
-    .main { margin-left:0; }
-    #menuBtn { display:inline-block; }
-    .topbar-actions { flex-wrap:wrap; }
-    .topbar-actions .btn { font-size:12px; padding:5px 8px; }
-    #dlg { width:95% !important; left:2% !important; }
-  }
-  @media screen and (min-width:601px) {
-    #menuBtn { display:none; }
+    .sidebar.show { left:0; }
+    .main { padding:12px; }
   }
 </style>
 </head>
 <body class="light">
 
-<!-- Topbar -->
+<!-- ===== Topbar ===== -->
 <div class="topbar">
-  <div class="topbar-title">業務ノート</div>
-  <div class="topbar-actions">
-    <button class="btn" id="menuBtn" onclick="toggleSidebar()">☰</button>
-    <button class="btn" onclick="toggleInfo()">info</button>
-    <button class="btn" onclick="toggleTheme()">tm</button>
-    <button class="btn" onclick="exportNotes()">ex</button>
-    <input type="file" id="importFile" style="display:none" onchange="importNotes(event)">
-    <button class="btn" onclick="document.getElementById('importFile').click()">in</button>
-    <button class="btn btn-danger" onclick="deleteSelected()">del</button>
-    <button class="btn btn-primary" onclick="openEditor(null)">新規</button>
+  <div class="topbar-inner">
+    <div class="topbar-title">業務ノート</div>
+    <div class="topbar-actions">
+      <button class="btn mobile-only" onclick="toggleSidebar()">≡</button>
+      <button class="btn" onclick="toggleInfo()">info</button>
+      <button class="btn" onclick="toggleTheme()">tm</button>
+      <button class="btn" onclick="exportNotes()">ex</button>
+      <input type="file" id="importFile" style="display:none" onchange="importNotes(event)">
+      <button class="btn" onclick="document.getElementById('importFile').click()">in</button>
+      <button class="btn btn-danger" onclick="deleteSelected()">del</button>
+      <button class="btn btn-primary" onclick="openEditor(null)">新規</button>
+    </div>
   </div>
 </div>
 
-<div id="infoPanel">右上の「新規」でメモを作成。スマホでは☰でカテゴリを開閉できます。</div>
+<!-- 情報＆検索 -->
+<div id="infoPanel">右上の「新規」でノート作成。選択して「del」で削除。</div>
 <div id="filterPanel"><input type="text" id="q" placeholder="検索したいワード" onkeyup="render()"></div>
 
+<!-- ===== 2カラム ===== -->
 <div class="container">
   <div class="sidebar">
     <h4>カテゴリ</h4>
@@ -113,7 +141,7 @@
   </div>
 </div>
 
-<!-- モーダル -->
+<!-- ===== モーダル ===== -->
 <div id="dlg">
   <div id="dlgHeader">ノート編集（ドラッグで移動できます）</div>
   <div class="content">
@@ -130,41 +158,57 @@
 </div>
 
 <script>
-var notes = [], current = null, categories = [];
+/* ===== 状態 ===== */
+var notes = [];
+var current = null;
+var categories = [];
+var selectedNotes = new Set();
 var theme = (function(){ try{ return localStorage.getItem("theme") || "light"; }catch(e){ return "light"; } })();
 var currentCategory = "all";
 
-function storageGet(k){ try { return localStorage.getItem(k); } catch(e){ return null; } }
-function storageSet(k,v){ try { localStorage.setItem(k,v); } catch(e){} }
+/* ===== ストレージ ===== */
+function storageGet(key){ try { return localStorage.getItem(key); } catch(e){ return null; } }
+function storageSet(key,val){ try { localStorage.setItem(key,val); } catch(e){} }
 
-function loadNotes(){ var d=storageGet("notes"); if(d){ try{ notes=JSON.parse(d)||[];}catch(e){notes=[];} } }
+/* ===== ノート保存/読込 ===== */
+function loadNotes(){ var d=storageGet("notes"); if(d){ try{notes=JSON.parse(d)||[]}catch(e){notes=[]} } }
 function saveNotes(){ storageSet("notes", JSON.stringify(notes)); }
-function loadCategories(){ var d=storageGet("categories"); if(d){ try{ categories=JSON.parse(d)||["daily","weekly","kb"]; }catch(e){ categories=["daily","weekly","kb"]; } } else { categories=["daily","weekly","kb"]; } }
+
+/* ===== カテゴリ保存/読込 ===== */
+function loadCategories(){
+  var d=storageGet("categories");
+  if(d){ try{categories=JSON.parse(d)||["daily","weekly","kb"]}catch(e){categories=["daily","weekly","kb"]} }
+  else { categories=["daily","weekly","kb"]; }
+}
 function saveCategories(){ storageSet("categories", JSON.stringify(categories)); }
 
+/* ===== レンダリング ===== */
 function render(){
   var list=document.getElementById('list'); list.innerHTML='';
   var q=(document.getElementById('q').value||'').toLowerCase();
-  for(var i=0;i<notes.length;i++){
-    var n=notes[i];
-    if(currentCategory!=="all" && n.cat!==currentCategory) continue;
-    var t=(n.title||"").toLowerCase(); var b=(n.notes||"").toLowerCase();
-    if(q && t.indexOf(q)===-1 && b.indexOf(q)===-1) continue;
+  notes.forEach(n=>{
+    if(currentCategory!=="all" && n.cat!==currentCategory) return;
+    var t=(n.title||"").toLowerCase();
+    var body=(n.notes||"").toLowerCase();
+    if(q && t.indexOf(q)===-1 && body.indexOf(q)===-1) return;
+
     var div=document.createElement('div');
     div.className='note';
-    div.innerHTML='<input type="checkbox" class="sel" data-id="'+n.id+'"> '+
+    div.innerHTML=
+      '<input type="checkbox" onclick="toggleSelect('+n.id+',this)"> '+
       '<h3>'+escapeHtml(n.title||"(無題)")+'</h3>'+
-      '<small>'+escapeHtml(n.date)+'（'+escapeHtml(n.cat)+ '）</small>'+
+      '<small>'+escapeHtml(n.date)+'（'+escapeHtml(n.cat)+'）</small>'+
       '<p>'+escapeHtml(n.notes||"")+'</p>';
-    div.onclick=function(ev){ if(ev.target.classList.contains("sel")) return; openEditorById(parseInt(ev.currentTarget.querySelector(".sel").dataset.id)); };
+    div.onclick=function(e){ if(e.target.tagName!=="INPUT") openEditor(n); };
     list.appendChild(div);
-  }
+  });
   renderCategories();
 }
 function renderCategories(){
   var list=document.getElementById("catList"); list.innerHTML="";
   var allLi=document.createElement("li"); allLi.textContent="すべて";
-  allLi.className=(currentCategory==="all")?"active":""; allLi.onclick=function(){ setCategory("all"); }; list.appendChild(allLi);
+  if(currentCategory==="all") allLi.classList.add("active");
+  allLi.onclick=function(){ setCategory("all"); }; list.appendChild(allLi);
   categories.forEach(cat=>{
     var li=document.createElement("li"); li.textContent=cat;
     if(cat===currentCategory) li.classList.add("active");
@@ -178,49 +222,80 @@ function renderCategories(){
 }
 function escapeHtml(s){ return (s||"").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;"); }
 
-function setCategory(c){ currentCategory=c; render(); }
-function addCategory(){ var val=document.getElementById("newCat").value.trim(); if(!val) return; if(categories.indexOf(val)!==-1){alert("既に存在します");return;} categories.push(val); saveCategories(); renderCategories(); document.getElementById("newCat").value=""; }
+/* ===== カテゴリ操作 ===== */
+function setCategory(cat){ currentCategory=cat; render(); }
+function addCategory(){ var v=document.getElementById("newCat").value.trim(); if(!v) return;
+  if(categories.indexOf(v)!==-1){ alert("既に存在します"); return; }
+  categories.push(v); saveCategories(); renderCategories(); document.getElementById("newCat").value=""; }
 
-function openEditor(n){ current=n||{id:Date.now(),date:todayStr(),cat:categories[0]||"daily",title:'',notes:''};
-  document.getElementById('fDate').value=current.date; document.getElementById('fCat').value=current.cat;
-  document.getElementById('fTitle').value=current.title; document.getElementById('fNotes').value=current.notes;
+/* ===== エディタ ===== */
+function openEditor(n){
+  current=n||{ id:Date.now(), date:todayStr(), cat:categories[0]||"daily", title:'', notes:'' };
+  document.getElementById('fDate').value=current.date;
+  document.getElementById('fCat').value=current.cat;
+  document.getElementById('fTitle').value=current.title;
+  document.getElementById('fNotes').value=current.notes;
   var dlg=document.getElementById('dlg'); dlg.style.display='block'; centerDialog();
 }
-function openEditorById(id){ for(var i=0;i<notes.length;i++){ if(notes[i].id===id){ openEditor(notes[i]); return; } } }
 function closeEditor(){ document.getElementById('dlg').style.display='none'; }
-
-function saveNote(){ current.date=document.getElementById('fDate').value; current.cat=document.getElementById('fCat').value; current.title=document.getElementById('fTitle').value; current.notes=document.getElementById('fNotes').value;
-  var idx=notes.findIndex(n=>n.id===current.id); if(idx>=0) notes[idx]=current; else notes.unshift(current);
+function saveNote(){
+  current.date=document.getElementById('fDate').value;
+  current.cat=document.getElementById('fCat').value;
+  current.title=document.getElementById('fTitle').value;
+  current.notes=document.getElementById('fNotes').value;
+  var i=notes.findIndex(x=>x.id===current.id);
+  if(i>=0) notes[i]=current; else notes.unshift(current);
   saveNotes(); render(); closeEditor();
 }
-function deleteNote(){ if(!current) return; if(confirm("削除しますか？")){ notes=notes.filter(n=>n.id!==current.id); saveNotes(); render(); closeEditor(); } }
+function deleteNote(){ if(!current) return; if(confirm("削除しますか？")){ notes=notes.filter(x=>x.id!==current.id); saveNotes(); render(); closeEditor(); } }
 
-function deleteSelected(){ var boxes=document.querySelectorAll(".sel:checked"); if(!boxes.length){alert("削除対象なし");return;} if(confirm(boxes.length+" 件削除しますか？")){ var ids=[...boxes].map(b=>parseInt(b.dataset.id)); notes=notes.filter(n=>!ids.includes(n.id)); saveNotes(); render(); } }
+/* ===== 複数選択削除 ===== */
+function toggleSelect(id,chk){ if(chk.checked) selectedNotes.add(id); else selectedNotes.delete(id); }
+function deleteSelected(){ if(selectedNotes.size===0){ alert("削除するノートを選んでください"); return; }
+  if(confirm(selectedNotes.size+"件のノートを削除しますか？")){ notes=notes.filter(n=>!selectedNotes.has(n.id)); selectedNotes.clear(); saveNotes(); render(); } }
 
-function exportNotes(){ var data=JSON.stringify(notes,null,2); var blob=new Blob([data],{type:"application/json"}); var url=URL.createObjectURL(blob); var a=document.createElement("a");
-  var now=new Date(); var fn="notes-"+now.getFullYear()+"-"+("0"+(now.getMonth()+1)).slice(-2)+"-"+("0"+now.getDate()).slice(-2)+".json"; a.href=url; a.download=fn; document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
+/* ===== Ex/Import ===== */
+function exportNotes(){
+  var data=JSON.stringify(notes,null,2); var blob=new Blob([data],{type:"application/json"}); var url=URL.createObjectURL(blob);
+  var a=document.createElement("a"); var d=new Date(); var f="notes-"+d.getFullYear()+"-"+("0"+(d.getMonth()+1)).slice(-2)+"-"+("0"+d.getDate()).slice(-2)+".json";
+  a.href=url; a.download=f; document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
 }
-function importNotes(e){ var f=e.target.files[0]; if(!f) return; var r=new FileReader(); r.onload=function(evt){ try{ var imp=JSON.parse(evt.target.result); if(!confirm("インポートしますか？")) return; if(imp&&imp.length){ if(confirm("既存に追加？キャンセル=上書き")){ notes=notes.concat(imp);}else{notes=imp;} saveNotes(); render(); alert("インポート完了！"); } }catch(err){ alert("失敗:"+err.message);} }; r.readAsText(f); }
+function importNotes(e){
+  var file=e.target.files[0]; if(!file) return; var r=new FileReader();
+  r.onload=function(evt){ try{ var imp=JSON.parse(evt.target.result);
+    if(confirm("インポートをキャンセルしますか？")) return;
+    if(imp&&imp.length){ if(confirm("既存のノートに追加しますか？（キャンセル=上書き）")) notes=notes.concat(imp); else notes=imp;
+      saveNotes(); render(); alert("インポート完了！"); } }catch(err){ alert("インポート失敗: "+err.message); } };
+  r.readAsText(file);
+}
 
+/* ===== 情報・テーマ ===== */
 function toggleInfo(){ var p=document.getElementById('infoPanel'); p.style.display=(p.style.display==='block')?'none':'block'; }
 function toggleTheme(){ theme=(theme==="light")?"dark":"light"; document.body.className=theme; storageSet("theme",theme); }
 
-function todayStr(){ var d=new Date(); return d.getFullYear()+"-"+("0"+(d.getMonth()+1)).slice(-2)+"-"+("0"+d.getDate()).slice(-2); }
+/* ===== ユーティリティ ===== */
+function todayStr(){ var d=new Date(); var m=("0"+(d.getMonth()+1)).slice(-2); var dd=("0"+d.getDate()).slice(-2); return d.getFullYear()+"-"+m+"-"+dd; }
 
+/* ===== 初期化 ===== */
 function init(){ document.body.className=theme; loadNotes(); loadCategories(); render(); }
 init();
 
-function toggleSidebar(){ document.querySelector(".sidebar").classList.toggle("open"); }
-
-/* モーダル移動 */
-(function(){ var dlg=document.getElementById("dlg"); var header=document.getElementById("dlgHeader"); var startX=0,startY=0,startLeft=0,startTop=0,dragging=false;
-  function getClientWidth(){ return document.documentElement.clientWidth||document.body.clientWidth; }
-  function getScrollTop(){ return document.documentElement.scrollTop||document.body.scrollTop; }
-  function centerDialog(){ var w=getClientWidth(); var dw=dlg.offsetWidth||520; var left=Math.max(10,Math.floor((w-dw)/2)); var top=getScrollTop()+80; dlg.style.left=left+"px"; dlg.style.top=top+"px"; }
+/* ===== モーダル移動 ===== */
+(function(){ var dlg=document.getElementById("dlg"); var head=document.getElementById("dlgHeader");
+  var sx=0,sy=0,sl=0,st=0,drag=false;
+  function getW(){ return document.documentElement.clientWidth||document.body.clientWidth; }
+  function getST(){ return document.documentElement.scrollTop||document.body.scrollTop; }
+  function centerDialog(){ var w=getW(); var dw=dlg.offsetWidth||520; var l=Math.max(10,Math.floor((w-dw)/2)); var t=getST()+80; dlg.style.left=l+"px"; dlg.style.top=t+"px"; }
   window.centerDialog=centerDialog;
-  header.onmousedown=function(e){ dragging=true; startX=e.clientX; startY=e.clientY; startLeft=dlg.offsetLeft; startTop=dlg.offsetTop; document.onmousemove=function(e2){ if(!dragging)return; dlg.style.left=(startLeft+e2.clientX-startX)+"px"; dlg.style.top=(startTop+e2.clientY-startY)+"px"; }; document.onmouseup=function(){ dragging=false; document.onmousemove=null; document.onmouseup=null; }; };
-  window.onresize=function(){ if(dlg.style.display==='block'&&!dragging){ centerDialog(); } };
+  head.onmousedown=function(e){ drag=true; sx=e.clientX; sy=e.clientY; sl=dlg.offsetLeft; st=dlg.offsetTop;
+    document.onmousemove=function(e2){ if(!drag) return; var dx=e2.clientX-sx; var dy=e2.clientY-sy; dlg.style.left=(sl+dx)+"px"; dlg.style.top=(st+dy)+"px"; };
+    document.onmouseup=function(){ drag=false; document.onmousemove=null; document.onmouseup=null; };
+  };
+  window.onresize=function(){ if(dlg.style.display==='block'&&!drag){ centerDialog(); } };
 })();
+
+/* ===== ハンバーガー制御 ===== */
+function toggleSidebar(){ document.querySelector('.sidebar').classList.toggle('show'); }
 </script>
 </body>
 </html>
